crates/schema/tests/compile_fail/policy_presence_non_exhaustive.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
 --> tests/compile_fail/policy_presence_non_exhaustive.rs:6:11
  |
6 |     match p {
  |           ^ pattern `_` not covered
  |
note: `Presence` defined here
 --> $WORKSPACE/crates/validator/src/policy/mod.rs
  |
  | pub enum Presence {
  | ^^^^^^^^^^^^^^^^^
  = note: the matched value is of type `Presence`
  = note: `Presence` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
  |
7 ~         nebula_validator::Presence::Active => {},
8 +         _ => todo!()
  |
